--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>org.tuftsctsi</groupId>
   <artifactId>csv2xlsx</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <name>csv2xlsx</name>
   <dependencies>
     <dependency>
